--- a/OptimizationNotes.tex
+++ b/OptimizationNotes.tex
@@ -1,4 +1,4 @@
-% Created 2015-10-28 Wed 16:38
+% Created 2015-10-28 Wed 18:04
 \documentclass[letterpaper, 11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -58,11 +58,11 @@ The general form of a first order initial value problem (IVP) can be stated as f
 \end{align}
 \end{subequations}
 
-
-The dependent variable $z$ is a vector of $m$ components. The independent variable $t$ is a scalar within the specified range from 0 to $t_{f}$.If $t$ does not
-appear explicitly in the governing equation $f(\cdot)$, the system is called \emph{autonomous}. Otherwise, the system is \emph{nonautomonous}.
+The dependent variable $z$ is a vector of $m$ components. The independent variable $t$ is a scalar within the specified range from 0 to $t_{f}$.If $t$ does not appear explicitly in
+the governing equation $f(\cdot)$, the system is called \emph{autonomous}. Otherwise, the system is \emph{nonautomonous}. The initial state of the system is given by a known
+parameter vector $z_0$. 
 
 \end{document}
-\bibliography{c:/Users/u418051/Documents/Emacs/MyBibTex/library}
+\bibliography{/Users/yisu/Emacs/MyBibTex/library}
 % Emacs 24.4.1 (Org mode 8.2.10)
 \end{document}
